提交了Recycleview的更改,添加侧滑删除的功能

--- a/YRecycleview/mylibrary/build.gradle
+++ b/YRecycleview/mylibrary/build.gradle
@@ -1,17 +1,14 @@
 apply plugin: 'com.android.library'
 apply plugin: 'com.github.dcendents.android-maven'
 apply plugin: 'com.jfrog.bintray'
-def siteUrl = 'https://github.com/yukuoyuan/YRecycleview'    // project homepage
-def gitUrl = 'https://github.com/yukuoyuan/YRecycleview.git' // project git
-group = "yuan.kuo.yu"
-version = "0.1"
+version = "1.0.1"
 android {
     compileSdkVersion 23
-    buildToolsVersion "24.0.0 rc3"
-
+    buildToolsVersion "23.0.2"
+    resourcePrefix "yukuoyuanyrecycleview"    //这个随便填
     defaultConfig {
         minSdkVersion 15
-        targetSdkVersion 23
+        targetSdkVersion 22
         versionCode 1
         versionName "1.0"
     }
@@ -22,21 +19,19 @@ android {
         }
     }
 }
-
-dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.android.support:appcompat-v7:23.3.0'
-    compile 'com.android.support:recyclerview-v7:23.3.0'
-}
-
+def siteUrl = 'https://github.com/yukuoyuan/YRecycleview' // 项目的主页
+def gitUrl = 'https://github.com/yukuoyuan/YRecycleview.git' // Git仓库的url
+group = "cn.yuan.yu.recycleview" // Maven Group ID for the artifact，一般填你唯一的包名
 install {
     repositories.mavenInstaller {
         // This generates POM.xml with proper parameters
         pom {
             project {
                 packaging 'aar'
-                name 'Less Code For Android'
+                // Add your description here
+                name 'Android Recycleview' //项目描述
                 url siteUrl
+                // Set your license
                 licenses {
                     license {
                         name 'The Apache Software License, Version 2.0'
@@ -45,9 +40,9 @@ install {
                 }
                 developers {
                     developer {
-                        id 'yu.kuo.yuan'
-                        name 'martian'
-                        email 'yukuoyuan@hotmail.com'
+                        id 'yukuoyuan'    //填写的一些基本信息
+                        name 'yukuoyuan'
+                        email 'yukuoyuan.@hotmail.com'
                     }
                 }
                 scm {
@@ -63,17 +58,14 @@ task sourcesJar(type: Jar) {
     from android.sourceSets.main.java.srcDirs
     classifier = 'sources'
 }
-
 task javadoc(type: Javadoc) {
     source = android.sourceSets.main.java.srcDirs
     classpath += project.files(android.getBootClasspath().join(File.pathSeparator))
 }
-
 task javadocJar(type: Jar, dependsOn: javadoc) {
     classifier = 'javadoc'
     from javadoc.destinationDir
 }
-
 artifacts {
     archives javadocJar
     archives sourcesJar
@@ -86,10 +78,15 @@ bintray {
     configurations = ['archives']
     pkg {
         repo = "maven"
-        name = "YuRecycleview"                // project name in jcenter
+        name = "YRecycleview"    //发布到JCenter上的项目名字
         websiteUrl = siteUrl
         vcsUrl = gitUrl
         licenses = ["Apache-2.0"]
         publish = true
     }
+}
+dependencies {
+    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile 'com.android.support:appcompat-v7:23.3.0'
+    compile 'com.android.support:recyclerview-v7:23.3.0'
 }
