--- a/YRecycleview/app/build.gradle
+++ b/YRecycleview/app/build.gradle
@@ -22,6 +22,7 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:23.3.0'
+    compile 'com.daimajia.swipelayout:library:1.2.0@aar'
     compile project(':mylibrary')
 }
 
